changes to microservices layout to support network rules

--- a/microservices-demo/kubernetes-manifests/checkoutservice.yaml
+++ b/microservices-demo/kubernetes-manifests/checkoutservice.yaml
@@ -24,6 +24,7 @@ spec:
     metadata:
       labels:
         app: checkoutservice
+        tier: backend
     spec:
       containers:
         - name: server
