--- a/microservices-demo/kubernetes-manifests/emailservice.yaml
+++ b/microservices-demo/kubernetes-manifests/emailservice.yaml
@@ -24,6 +24,7 @@ spec:
     metadata:
       labels:
         app: emailservice
+        tier: backend
     spec:
       terminationGracePeriodSeconds: 5
       containers:
