--- a/microservices-demo/kubernetes-manifests/frontend.yaml
+++ b/microservices-demo/kubernetes-manifests/frontend.yaml
@@ -24,6 +24,7 @@ spec:
     metadata:
       labels:
         app: frontend
+        tier: frontend
     spec:
       containers:
         - name: server
