--- a/microservices-demo/kubernetes-manifests/loadgenerator.yaml
+++ b/microservices-demo/kubernetes-manifests/loadgenerator.yaml
@@ -25,6 +25,7 @@ spec:
     metadata:
       labels:
         app: loadgenerator
+        tier: backend
     spec:
       terminationGracePeriodSeconds: 5
       restartPolicy: Always
