--- a/microservices-demo/kubernetes-manifests/redis.yaml
+++ b/microservices-demo/kubernetes-manifests/redis.yaml
@@ -24,6 +24,7 @@ spec:
     metadata:
       labels:
         app: redis-cart
+        tier: database
     spec:
       containers:
       - name: redis
