--- a/microservices-demo/kubernetes-manifests/adservice.yaml
+++ b/microservices-demo/kubernetes-manifests/adservice.yaml
@@ -24,6 +24,7 @@ spec:
     metadata:
       labels:
         app: adservice
+        tier: backend
     spec:
       terminationGracePeriodSeconds: 5
       containers:
