--- a/microservices-demo/kubernetes-manifests/currencyservice.yaml
+++ b/microservices-demo/kubernetes-manifests/currencyservice.yaml
@@ -24,6 +24,7 @@ spec:
     metadata:
       labels:
         app: currencyservice
+        tier: backend
     spec:
       terminationGracePeriodSeconds: 5
       containers:
