--- a/microservices-demo/kubernetes-manifests/productcatalogservice.yaml
+++ b/microservices-demo/kubernetes-manifests/productcatalogservice.yaml
@@ -24,6 +24,7 @@ spec:
     metadata:
       labels:
         app: productcatalogservice
+        tier: backend
     spec:
       terminationGracePeriodSeconds: 5
       containers:
