--- a/microservices-demo/skaffold.yaml
+++ b/microservices-demo/skaffold.yaml
@@ -48,6 +48,7 @@ deploy:
   kubectl:
     manifests:
     - ./kubernetes-manifests/**.yaml
+    - ./network-manifests/calico/**.yaml
 profiles:
 # "travis-ci" profile is used to build the images without
 # pushing them.
