--- a/microservices-demo/network-manifests/calico-debug/allow-all-egress.yaml
+++ b/microservices-demo/network-manifests/calico-debug/allow-all-egress.yaml
@@ -1,9 +1,10 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: default-deny-ingress
-  namespace: default
+  name: allow-all-egress
 spec:
   podSelector: {}
+  egress:
+    - {}
   policyTypes:
-    - Ingress
+    - Egress
