--- a/microservices-demo/network-manifests/calico/allow-all-internet-to-frontend-traffic.yaml
+++ b/microservices-demo/network-manifests/calico/allow-all-internet-to-frontend-traffic.yaml
@@ -1,3 +1,6 @@
+# allows all internet traffic to the frontend
+# reference : https://github.com/ahmetb/kubernetes-network-policy-recipes/blob/master/08-allow-external-traffic.md
+
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
@@ -8,4 +11,4 @@ spec:
     matchLabels:
       app: frontend
   ingress:
-    - {}
+  - from: []
