--- a/microservices-demo/network-policy-manifests/calico/allow-currency-service-egress-to-internet.yaml
+++ b/microservices-demo/network-policy-manifests/calico/allow-currency-service-egress-to-internet.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: currency-service-allow-egress
+  namespace: default
 spec:
   podSelector:
     matchLabels:
